--- a/Depo/Depo/Presentation/UserStories/Others/DarkPopUp/DarkPopUpController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/DarkPopUp/DarkPopUpController.xib
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina3_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DarkPopUpController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DarkPopUpController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="actionButton" destination="xKD-RZ-17J" id="lrr-zi-Qiz"/>
                 <outlet property="closeButton" destination="zae-Gf-COL" id="f5C-Jc-Ju5"/>
@@ -56,7 +55,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xKD-RZ-17J" customClass="InsetsButton" customModule="lifebox" customModuleProvider="target">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xKD-RZ-17J" customClass="InsetsButton" customModule="Billo" customModuleProvider="target">
                                                     <rect key="frame" x="49" y="78" width="46" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="fV6-6S-ElA"/>
@@ -72,7 +71,7 @@
                                                     </connections>
                                                 </button>
                                             </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" name="secondaryBackground"/>
                                             <constraints>
                                                 <constraint firstItem="xKD-RZ-17J" firstAttribute="centerX" secondItem="aFg-HR-PWu" secondAttribute="centerX" id="2Ln-j8-0c4"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="xKD-RZ-17J" secondAttribute="trailing" id="6gi-6n-c2B"/>
@@ -99,7 +98,7 @@
                                             </connections>
                                         </button>
                                     </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="secondaryBackground"/>
                                     <constraints>
                                         <constraint firstItem="zae-Gf-COL" firstAttribute="top" secondItem="DQ0-Qd-mrh" secondAttribute="top" id="0W0-PY-mpb"/>
                                         <constraint firstAttribute="trailing" secondItem="aFg-HR-PWu" secondAttribute="trailing" constant="40" id="30C-Ld-rGE"/>
@@ -149,9 +148,13 @@
                 <constraint firstItem="0V8-bR-bNm" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="a0Q-Rf-RqW"/>
                 <constraint firstItem="0V8-bR-bNm" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="ecw-q1-jCX"/>
             </constraints>
+            <point key="canvasLocation" x="139" y="155"/>
         </view>
     </objects>
     <resources>
         <image name="grayCloseButton" width="17" height="17"/>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
