--- a/Depo/Depo/Presentation/UserStories/Others/HideSmashPopUps/HSSmartAlbumWarningPopUp/HSSmartAlbumWarningPopUp.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/HideSmashPopUps/HSSmartAlbumWarningPopUp/HSSmartAlbumWarningPopUp.xib
@@ -4,8 +4,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -132,7 +132,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="hZd-03-AMT" secondAttribute="trailing" id="Cez-OP-80K"/>
                         <constraint firstAttribute="width" priority="750" constant="360" id="Hic-21-iDi"/>
@@ -162,8 +162,8 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
