--- a/Depo/Depo/Presentation/CollectionViewCells/AlbumCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/AlbumCollectionViewCell.xib
@@ -50,7 +50,7 @@
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8oD-m8-NKh">
                                 <rect key="frame" x="7" y="120" width="327" height="1"/>
-                                <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" name="itemSeperator"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="tKH-qv-20J"/>
                                 </constraints>
@@ -165,6 +165,9 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <namedColor name="itemSeperator">
+            <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
