--- a/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarView.xib
+++ b/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarView.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_5" orientation="portrait" appearance="dark"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -37,14 +36,14 @@
                         </view>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W0f-ko-odc" customClass="MusicBar" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="813" width="414" height="0.0"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstAttribute="height" id="oLW-8y-KOm"/>
                             </constraints>
                         </view>
                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JJb-a8-a7O">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                         </view>
                         <tabBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pdh-iF-uTx" customClass="CustomTabBar" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="813" width="414" height="49"/>
@@ -57,7 +56,7 @@
                             <color key="selectedImageTintColor" red="0.2666666667" green="0.80000000000000004" blue="0.81568627449999997" alpha="1" colorSpace="calibratedRGB"/>
                         </tabBar>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HTg-Qb-BHM">
-                            <rect key="frame" x="167" y="781.66666666666663" width="80" height="80"/>
+                            <rect key="frame" x="175" y="789.66666666666663" width="64" height="64"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="HTg-Qb-BHM" secondAttribute="height" multiplier="1:1" id="bBY-Vf-F58"/>
                             </constraints>
@@ -94,7 +93,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="znv-0S-e61"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="FJl-Cl-AGP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="9wa-HG-Fvr"/>
                 <constraint firstItem="FJl-Cl-AGP" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" id="COT-s0-gxJ"/>
@@ -108,11 +107,11 @@
     </objects>
     <resources>
         <image name="CenterButton" width="64" height="64"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
