--- a/Depo/Depo/Presentation/SupportFormController/SupportFormPrefilledController.xib
+++ b/Depo/Depo/Presentation/SupportFormController/SupportFormPrefilledController.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina3_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SupportFormPrefilledController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SupportFormPrefilledController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="scrollView" destination="2pQ-Xv-lt4" id="ttU-FV-q58"/>
                 <outlet property="sendButton" destination="CHb-qr-U2J" id="GCh-vx-Gos"/>
@@ -32,7 +31,7 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="335" placeholderIntrinsicHeight="102" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="6Tq-17-xxS">
                                     <rect key="frame" x="20" y="20" width="280" height="102"/>
                                 </stackView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CHb-qr-U2J" customClass="RoundedInsetsButton" customModule="lifebox" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CHb-qr-U2J" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="72" y="142" width="176" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="SG8-PV-DDT"/>
@@ -45,7 +44,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstItem="6Tq-17-xxS" firstAttribute="top" secondItem="qei-N7-1wp" secondAttribute="top" constant="20" id="bwd-kA-PgP"/>
                                 <constraint firstItem="6Tq-17-xxS" firstAttribute="leading" secondItem="qei-N7-1wp" secondAttribute="leading" constant="20" id="fsx-lf-5RX"/>
@@ -67,14 +66,20 @@
                     </constraints>
                 </scrollView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="2pQ-Xv-lt4" secondAttribute="trailing" id="Bty-pq-2Mz"/>
                 <constraint firstItem="2pQ-Xv-lt4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="KgB-sx-pNo"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2pQ-Xv-lt4" secondAttribute="bottom" id="SGK-ot-CnU" customClass="KeyboardLayoutConstraint" customModule="lifebox" customModuleProvider="target"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2pQ-Xv-lt4" secondAttribute="bottom" id="SGK-ot-CnU" customClass="KeyboardLayoutConstraint" customModule="Billo" customModuleProvider="target"/>
                 <constraint firstItem="2pQ-Xv-lt4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="f5F-OL-SgI"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="139" y="155"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
