--- a/Depo/Depo/Presentation/UserStories/Grid/HiddenPhotos/Subviews/AlbumCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Grid/HiddenPhotos/Subviews/AlbumCell.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AlbumCell" id="Qtq-a1-yZo" customClass="AlbumCell" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AlbumCell" id="Qtq-a1-yZo" customClass="AlbumCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="129" height="170"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -20,7 +21,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="chQ-bu-QOK">
                         <rect key="frame" x="1" y="1" width="127" height="127"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="871-ba-0El" customClass="LoadingImageView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="871-ba-0El" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="127" height="127"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6vk-6n-qQs">
@@ -31,7 +32,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="primaryBackground"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="871-ba-0El" secondAttribute="bottom" id="3st-6T-YTs"/>
                             <constraint firstAttribute="trailing" secondItem="6vk-6n-qQs" secondAttribute="trailing" constant="4" id="BGV-I4-4bf"/>
@@ -53,6 +54,7 @@
                     </label>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="IIb-rn-eEh"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="chQ-bu-QOK" firstAttribute="top" secondItem="Qtq-a1-yZo" secondAttribute="top" constant="1" id="34a-nN-aa4"/>
@@ -63,7 +65,6 @@
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="QLc-JB-eU4" secondAttribute="bottom" id="m0F-WR-MBK"/>
                 <constraint firstAttribute="trailing" secondItem="chQ-bu-QOK" secondAttribute="trailing" constant="1" id="z8f-YY-T8E"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="IIb-rn-eEh"/>
             <size key="customSize" width="167" height="244"/>
             <connections>
                 <outlet property="selectionIcon" destination="6vk-6n-qQs" id="MVP-bA-ItP"/>
@@ -74,4 +75,9 @@
             <point key="canvasLocation" x="-88" y="125"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
