--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/FileInfo/FileMetaInfoView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/FileInfo/FileMetaInfoView.xib
@@ -6,7 +6,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -119,7 +118,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="Kqx-rf-kXg" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="K3F-Cc-BVq"/>
                 <constraint firstItem="bdV-cg-4Ri" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="N7B-Fa-MG3"/>
@@ -151,8 +150,8 @@
         <namedColor name="itemSeperator">
             <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
