--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/FileName/FileNameView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/FileName/FileNameView.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -80,7 +79,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="evj-aP-cxe" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="3lp-X0-yoo"/>
                 <constraint firstItem="m7Q-aI-nJj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5Bm-rG-P7Q"/>
@@ -108,8 +107,8 @@
         <namedColor name="itemSeperator">
             <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
