--- a/Depo/Depo/Presentation/UserStories/Others/LeavePremiumViewController/View/LeavePremiumViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/LeavePremiumViewController/View/LeavePremiumViewController.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LeavePremiumViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LeavePremiumViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="leavePremiumView" destination="B3j-Wn-VAB" id="xp4-3X-dVK"/>
                 <outlet property="view" destination="iN0-l3-epB" id="xYp-XJ-4Lc"/>
@@ -21,19 +20,25 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B3j-Wn-VAB" customClass="LeavePremiumView" customModule="lifebox" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B3j-Wn-VAB" customClass="LeavePremiumView" customModule="Billo" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="B3j-Wn-VAB" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="D8J-BD-z3T"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="B3j-Wn-VAB" secondAttribute="bottom" id="RyU-24-4ia"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="B3j-Wn-VAB" secondAttribute="trailing" id="ncM-OJ-S0t"/>
                 <constraint firstItem="B3j-Wn-VAB" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="v5N-U5-Sqw"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="142" y="127"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
