--- a/Depo/Depo/Presentation/UserStories/Others/PremiumViewController/View/Subviews/BecomePremiumView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PremiumViewController/View/Subviews/BecomePremiumView.xib
@@ -78,7 +78,7 @@
                 </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="H92-s8-VTb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="KH7-hh-WwR"/>
                 <constraint firstAttribute="trailing" secondItem="H92-s8-VTb" secondAttribute="trailing" id="Kwk-OI-fjh"/>
