--- a/Depo/Depo/Presentation/UserStories/Spotify/ImportController/SpotifyImportViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Spotify/ImportController/SpotifyImportViewController.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SpotifyImportViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SpotifyImportViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="brandImageHeight" destination="Tdk-LV-Gju" id="tjp-1v-IUY"/>
                 <outlet property="descriptionLabel" destination="tEB-d9-xyu" id="pFO-so-NLZ"/>
@@ -55,7 +56,7 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="from Spotify" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kY4-Nf-CVq">
-                            <rect key="frame" x="61" y="329" width="95" height="21"/>
+                            <rect key="frame" x="61.5" y="329" width="94" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -89,7 +90,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PZh-Vl-5kS">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PZh-Vl-5kS">
                     <rect key="frame" x="101.5" y="614" width="172" height="32"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="32" id="grV-0p-ktZ"/>
@@ -98,7 +99,8 @@
                     <state key="normal" title="Import in Background"/>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="PZh-Vl-5kS" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="9Oo-sC-ab7"/>
                 <constraint firstItem="7h9-Zq-KgA" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="AA5-Mi-Pmy"/>
@@ -110,7 +112,6 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="PZh-Vl-5kS" secondAttribute="bottom" constant="21" id="tMk-95-p0G"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="tEB-d9-xyu" secondAttribute="trailing" constant="50" id="x1F-U1-CXn"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="53.600000000000001" y="48.125937031484263"/>
         </view>
     </objects>
@@ -118,5 +119,8 @@
         <image name="dark_logo" width="66" height="64"/>
         <image name="dot_arrow" width="68" height="14"/>
         <image name="spotify_logo" width="1024" height="1024"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
