--- a/Depo/Depo/Presentation/UserStories/Spotify/ImportPlaylists/SpotifyPlaylistsViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Spotify/ImportPlaylists/SpotifyPlaylistsViewController.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14865.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14819.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SpotifyPlaylistsViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SpotifyPlaylistsViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="2cB-kG-ROb" id="2Ld-Xf-NSj"/>
                 <outlet property="collectionViewTopOffset" destination="sPQ-V9-DdF" id="XMW-1a-U6g"/>
@@ -47,7 +48,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstItem="sAZ-CD-eKw" firstAttribute="centerX" secondItem="J7f-oP-229" secondAttribute="centerX" id="DPV-QL-IGU"/>
                         <constraint firstItem="8d5-KR-ayx" firstAttribute="centerX" secondItem="J7f-oP-229" secondAttribute="centerX" id="OMD-Eq-bPa"/>
@@ -62,7 +63,7 @@
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="2cB-kG-ROb">
                     <rect key="frame" x="0.0" y="155" width="375" height="512"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TEk-n2-U1M">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -70,14 +71,14 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zbs-pk-Dsx" customClass="TransparentGradientView" customModule="lifebox" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zbs-pk-Dsx" customClass="TransparentGradientView" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="581" width="375" height="86"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="86" id="VrX-UB-uv7"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tSE-yc-5fn" customClass="BlueButtonWithMediumWhiteText" customModule="lifebox" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tSE-yc-5fn" customClass="BlueButtonWithMediumWhiteText" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="84.5" y="607" width="206" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="9jk-vc-UWE"/>
@@ -115,7 +116,8 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="tSE-yc-5fn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Bog-Fp-JLl"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="274-sj-MZH" secondAttribute="trailing" constant="16" id="DBA-3Z-wEU"/>
@@ -134,7 +136,6 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="J7f-oP-229" secondAttribute="trailing" id="wCz-sl-7d8"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="2cB-kG-ROb" secondAttribute="bottom" id="wEd-3e-Xrs"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="53.600000000000001" y="48.125937031484263"/>
         </view>
     </objects>
@@ -142,5 +143,8 @@
         <image name="ImageNoMusics" width="96" height="72"/>
         <image name="import_success_back" width="375" height="155"/>
         <image name="spotify_checkmark" width="57" height="41"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
